--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "kill": "kill -9 $(lsof -t -i:3000)",
+    "dev": "npm run kill && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
